@@ -400,6 +400,10 @@
 <td><p>radiance</p></td>
 <td><p>whether to ingest the cloud fraction (default) or the radiance cloud fraction (cloud_fraction=radiance)</p></td>
 </tr>
+<tr class="row-even"><td><p>qa_filter</p></td>
+<td><p>custom</p></td>
+<td><p>if enabled (qa_filter=custom) then for data generated by the SO2 COBRA processor V02.00.00 the validity will be set to 0 or 100 based on the revised qa_value calculation (see PRF) instead of using the existing qa_value</p></td>
+</tr>
 </tbody>
 </table>
 </section>
